--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redux-saga",
+  "name": "redux-saga-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,12 +10,15 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "eslint-config-airbnb": "^18.1.0",
+    "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "react-toastify": "^5.5.0",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.5",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
